# EdgeLedger

./: .env.example  .gitignore  Dockerfile  README.md  Start EdgeLedger.bat  Start EdgeLedger.ps1  index.html  package.json  pnpm-lock.yaml  render.yaml  vite.config.ts
backend/: .env.example  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  main.py
backend/coach_miranda_miner/: __init__.py  __main__.py  alerts.py  analyzer.py  backtest.py  broker.py  charts.py  coach.py  config.py  dashboard.py  data.py  discovery.py  exchanges.py  gatekeepers.py  indicators.py  intelligence.py  journal.py  market_cap.py  market_data_quality.py  miner.py  models.py  news.py  oi.py  prompts.py  risk.py  scalper.py  telegram.py  validator.py
backend/tests/: __init__.py  test_alerts.py  test_analyzer_strategy_quality.py  test_api.py  test_coinbase_router.py  test_config.py  test_dashboard.py  test_discovery.py  test_journal_alerts.py  test_market_data_quality.py  test_oi.py  test_scalper.py  test_strategy_backtest.py  test_telegram_threshold.py  test_two_stage_scan.py  test_validator.py
src/: App.tsx  api.ts  data.ts  db.ts  notifications.ts  styles.css  types.ts  utils.ts
src/components/: Shell.tsx  TradingViewChart.tsx  Ui.tsx
src/pages/: Analytics.tsx  Dashboard.tsx  Goals.tsx  MarketCalendar.tsx  OpenInterest.tsx  Playbook.tsx  RiskLab.tsx  Scanner.tsx  Screener.tsx  Settings.tsx  Trades.tsx
src/test/: api.test.ts  notifications.test.ts  utils.test.ts
